sidenavbar hyperlink hover alignments  fixed

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -7863,6 +7863,9 @@ label {
     box-sizing: content-box;
     height: auto !important;
 }
+.sidenavbar a:hover{
+    color: #fff !important;
+}
 @media(min-width:300px) and (max-width:480px){
     .about-img-blog{
         display: block !important;
